# pcl_compress

./: .clang-format  CMakeLists.txt
apps/: cloud_stats.cpp  compress_e57n.cpp  compress_octree.cpp  compress_primitives.cpp  compress_rmse.cpp  decompress_octree.cpp  decompress_patches.cpp  merge_compressed.cpp  stats_decomp.cpp
cmake/modules/: FindE57PCL.cmake  FindJBig2Dec.cmake  FindJBig2Enc.cmake  FindJPEG.cmake  FindLeptonica.cmake  FindPrimitiveDetection.cmake  FindZLib.cmake
cmake/modules/self/: PCLCompressConfig.cmake
data/thresholded/: out2
include/: cereal.hpp  compress.hpp  decomposition.hpp  decompress.hpp  jbig2.hpp  jpeg2000.hpp  quadtree.hpp  range.hpp  types.hpp  utils.hpp  zlib.hpp  zlib.ipp
src/: compress.cpp  decomposition.cpp  decompress.cpp  jbig2.cpp  jpeg2000.cpp  quadtree.cpp  utils.cpp  zlib.cpp
tests/: jbig2_test.cpp  jpeg2000_test.cpp  naive_test.cpp  patch_test.cpp  serialize_octree_decomp.cpp  test_compress_patches.cpp  test_image_compress.cpp  test_utils.cpp  test_zlib_compress.cpp
tests/include/: metrics.hpp
tests/misc/: jbig2_test.cpp  jpeg2000_test.cpp  patch_test.cpp  quadtree_test.cpp  serialize_octree_decomp.cpp  serialize_primitive_decomp.cpp
